FluentBit/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fluentbit
  namespace: logging-namespace
spec:
  selector:
    app: fluentbit
  ports:
  - protocol: TCP
    port: 5170
    targetPort: 5170
    name: logging-port
  - protocol: TCP
    port: 2020
    targetPort: 2020
    name: logging-metrics-port
  type: ClusterIP
