FluentBit/k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-fluentbit-traffic
  namespace: logging-namespace
spec:
  podSelector:
    matchLabels:
      app: fluentbit

  policyTypes:
    - Ingress

  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: allow_splunk_logs
    ports:
    - protocol: TCP
      port: 5170

  - from:
      - podSelector:
          matchLabels:
            app: api-gateway
    ports:
    - protocol: TCP
      port: 2020
